<resources>
    <string name="app_name">Unipi Audio Stories</string>
    <string name="title_activity_story_detail_host">StoryDetailHostActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_story_list">Stories</string>
    <string name="title_story_detail">Story Detail</string>

    <!-- Language -->
    <string name="language">Language</string>
    <string name="choose_language">Choose your language</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="french">French</string>
    <string name="greek">Greek</string>

    <!-- Story -->
    <string name="story_text" translatable="false">“Hi, I am Abe and I am a Service Dog. When I was a puppy, my owner told me I would be a Service Dog for a person who could not see. I didn’t know what that meant, but I knew it was something special. When I got a little older, I was sent away to school. My sister was sent to another school to learn how to help people with Autism. To be their friend and help them get around. One of my other brothers was sent to a special school so he could learn how to warn people that they were going to get sick before they did. My other brothers and sisters became good friends with people in good families. Not every dog can become a Service Dog. School was hard. I had to learn many things just like you. I had to learn to stop and look before crossing the street. And learn what a red, yellow, and green directional light meant and what I should do. I was taught how to guide a person to go left, right, to step up and down, to stop, to move forward a little, to back up, and much more. I had to learn where I was and how to get back, even in strange areas. I had to learn how to behave in a restaurant and never, ever, beg for food. That was hard. I had to learn that I could be a plain old playful dog as long as my halter was off. But once it was on… I was working. I became the eyes of my master and their safety and how they got around was up to me. After a long time in school, I graduated and my trainer introduced me to BJ. The person who would become my master. We were both excited. We trained together for several weeks and became very good friends. She was really nice and we always spent fun-time together once she took my halter off. One day the trainer said we were ready and I was off to a new home with my master and friend. We shared many years together and had many wonderful experiences. We went shopping, visited friends, ate in fine restaurants, and traveled across the country. I took care of BJ. I knew when she didn’t feel right and could tell if she was happy or unhappy, sad, grumpy, or whatever. I would always try to make things better for her. BJ took care of me. She knew when I didn’t feel right and could tell if I were happy or unhappy, sad, grumpy, or whatever. She would always try to make things better for me. A long time has passed and now I can’t help my friend any more. BJ is off to school again and training with a new Service Dog. I will meet him tomorrow and help him understand his new master. Then I become like my other brothers and sisters. I become a good friend for people in a good family. You really couldn’t ask for more.</string>
    <string name="story_title_placeholder">Story Title</string>
    <string name="story_author_placeholder">by Author Name</string>
    <string name="story_detail_content_description">Book cover</string>
    <string name="story_year_placeholder">2020</string>

    <!-- Navigation -->
    <string name="navigation_statistics_title">Statistics</string>
    <string name="navigation_settings_title">Settings</string>

    <!-- Titles -->
    <string name="statistics_title">My Statistics</string>
    <string name="story_list_title">All Stories</string>

    <string name="play_button">Play</string>
    <string name="stop_button">Stop</string>
    <string name="story_total_views_placeholder">Total Views: 0</string>
    <string name="adapter_total_views_placeholder">Total views: %1$s</string>
    <string name="adapter_author_placeholder">by %1$s</string>
    <string name="story_sort_order_placeholder" translatable="false">10</string>
</resources>