<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/story_detail_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.story_detail.StoryDetailHostActivity"
    tools:ignore="MergeRootFrame">

    <ProgressBar
        android:id="@+id/story_detail_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/story_banner"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <ImageView
            android:id="@+id/story_image"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/story_detail_content_description" />

        <LinearLayout
            android:id="@+id/story_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/story_title"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/design_default_color_primary"
                android:text="@string/story_title_placeholder"
                android:textIsSelectable="true"
                tools:context="com.unipi.mobdev.unipiaudiostories.ui.story_detail.StoryDetailFragment"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/story_author"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/story_author_placeholder"
                app:layout_constraintTop_toBottomOf="@+id/story_title"/>

            <TextView
                android:id="@+id/story_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/textAppearanceMedium"
                android:text="@string/story_year_placeholder"
                app:layout_constraintTop_toBottomOf="@+id/story_author"
                app:layout_constraintLeft_toLeftOf="parent"/>

        </LinearLayout>


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/story_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:padding="8dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/story_banner"
        android:background="#E0F7FA" >

        <androidx.core.widget.NestedScrollView
            android:id="@+id/story_text_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:fillViewport="true" >

            <TextView
                android:id="@+id/story_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:padding="8dp"
                android:text="@string/story_text"
                android:scrollbars="vertical" />

        </androidx.core.widget.NestedScrollView>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/controls_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/play_button"
            app:icon="@drawable/ic_play_circle_outline"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:text="@string/play_button" />

        <Button
            android:id="@+id/stop_button"
            app:icon="@drawable/ic_stop"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_button" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>